    - Can now lock items again in inventory and on mouse via ctrl+right click or '`' for mouse item
    - Added back in movable UI and converted over to my own position saving system. This covers:
        - Your main inventory, equipment window, character window, kith & kin window, map window, Calendar widget,
          Help Window, Your avatar, The Party view via right click, Bufflist (alt+right click drag buff icons)
    - Made it so that anything that is movable has to have a certain percentage of its width or height exposed otherwise
      it will rebound back into the clients window. This is to avoid people dragging windows off into oblivion and
      having to manually reset them in the settings
    - The buttons to bring up windows have been moved to the menugrid under management ('m'). You can still toggle them
      via the old keybinds as well
        - Equipment ('e')  Ctrl+E
        - Character Sheet ('t') Ctrl+T
        - Options ('o') Ctrl+O
        - Kith & Kin ('k') Ctrl+B
        - Map ('m') Ctrl+A
        - Inventory ('i') Tab
        - Minimap ('n')
        - Chat ('c') Ctrl + C
    - Bumped the radius circle height back to 10 units like default
    - Control + hover over party member icons to see how far they are, limited to 1000 tiles..
    - Quest log is now part of a window and movable
    - Chat is now part of a window and movable
    - Hotkeys are now movable via ctrl+ drag. Options for F, numpad, and number belts in options -> Gameplay
    - Saving minimaps is now in as well.
    - Hidden, Deleted, Alerted are toggled now rather than new
    - Minimap cache tiles don't keep grid references..
    - Fixes some bugs that caused crashes
    - Added in Pagina search window 'm' -> 's'
    - Can hover over tiles and gobs to get details -> ctrl + hover
    - Party members have a different icon now on minimap. So do you.
    - Sea is now blood red
    - Change increase map view distance options-> video