@@ -332,8 +332,10 @@ public class LocalMiniMap extends Widget {
     }
 
     private void drawView(final GOut g, final Coord base) {
-        final Coord gc = base.add(ui.sess.glob.oc.getgob(ui.gui.map.plgob).rc.div(tilesz).floor());
-        g.image(view, gc.sub(view.sz().div(2)));
+        if(ui.gui != null && ui.gui.map != null) {
+	    final Coord gc = base.add(ui.sess.glob.oc.getgob(ui.gui.map.plgob).rc.div(tilesz).floor());
+	    g.image(view, gc.sub(view.sz().div(2)));
+	}
     }
 
     public void draw(GOut g) {
