@@ -90,3 +90,5 @@
     - Party members have a different icon now on minimap. So do you.
     - Sea is now blood red
     - Change increase map view distance options-> video
+    - Progress bar shows %
+    -
